# staccato

./: CMakeLists.txt  Cargo.toml  __init__.py  lo.pcap  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: packet_builder.py
core/: exceptions.py  models.py  packet_utils.py
crafting/: layer_crafter.py
services/: packet_building_service.py
src/: main.rs
