[package]
name = "staccato"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
pcap = "2.2.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
http = "1.3.1"
